# ad-astra

./: .gitignore  README.md  pyproject.toml  readme.md  reasonix.toml
.cursor/rules/: solver-review.mdc
data/: README.md
docs/: architecture.md  mobile-database-format.md
mobile/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
mobile/app/components/: CatalogCard.tsx  CoordinateReadout.tsx  NightModeToggle.tsx  PrimaryActionButton.tsx  SolverStepper.tsx  StarMarkerLayer.tsx  StatusCard.tsx
mobile/app/components/ui/: BottomActionBar.tsx  ButtonPrimary.tsx  ButtonSecondaryPill.tsx  Footer.tsx  (+11 more)
mobile/app/navigation/: AppNavigator.tsx  useHideTabBar.ts
mobile/app/screens/: AboutScreen.tsx  CatalogScreen.tsx  HomeScreen.tsx  ImagePreviewScreen.tsx  ResultScreen.tsx  SettingsScreen.tsx  SolvingScreen.tsx
mobile/app/store/: SolverProvider.tsx  solver.ts
mobile/app/theme/: colors.ts  responsive.ts  tokens.ts
mobile/app/types/: adb.d.ts  navigation.ts  solver.ts  upng-js.d.ts  wasm.d.ts
mobile/app/utils/: databaseLoader.ts  solver.ts  solverLifecycle.ts  starDetection.ts  syntheticImage.ts  wasmSolve.worker.ts
mobile/modules/ad-astra-solver-native/: expo-module.config.json  package.json
mobile/scripts/: test-native-parse.ts  test-solver-lifecycle.ts  test-star-detection.ts  test-wasm-solver.ts
native/ad_astra_solver/: Cargo.toml
native/ad_astra_solver/src/: db.rs  error.rs  geometry.rs  hash.rs  lib.rs  solve.rs  types.rs
native/ad_astra_solver/tests/: solve_real_db.rs
native/ad_astra_solver_ffi/: Cargo.toml
native/ad_astra_solver_ffi/src/: lib.rs
native/ad_astra_solver_wasm/: Cargo.toml
native/ad_astra_solver_wasm/src/: lib.rs
scripts/: build-android-native.sh  build_adb.py  build_catalog.py  prebuild-mobile-solver.sh
src/ad_astra/: binary.py  catalog.py  cli.py  coordinates.py  features.py  index.py  ingest.py  mobile_db.py  projection.py  solver.py  solver_models.py  sources.py  synthetic.py  tetra3_adapter.py  tetra3_db_inspect.py
tests/: test_binary.py  test_catalog.py  test_coordinates.py  test_features.py  test_index.py  test_mobile_db.py  test_projection.py  test_solver.py  test_solver_models.py  test_synthetic.py  test_tetra3_adapter.py  test_tetra3_db_inspect.py
(+4 files in other folders)
