[project]
name = "ad-astra"
version = "0.1.0"
description = "Offline mobile plate-solving engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
tetra3 = [
    "tetra3 @ git+https://github.com/esa/tetra3.git",
    "scipy>=1.7",
    "Pillow>=8.3",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ad-astra[tetra3]",
]

[project.scripts]
ad-astra = "ad_astra.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
