[package]
name = "ad_astra_solver"
version = "0.1.0"
edition = "2021"
description = "Offline plate solver runtime for Ad Astra"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
tempfile = "3"
