[package]
name = "ad_astra_solver_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ad_astra_solver = { path = "../ad_astra_solver" }
js-sys = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = "0.4"

[features]
default = ["console_error_panic_hook"]
